[Fix] Fix text alignment for landing page

--- a/src/App.css
+++ b/src/App.css
@@ -24,7 +24,7 @@ box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
   font-weight: 300;
   font-size: 3rem;
   margin-bottom: 3rem;
-
+  text-align: center;
 }
 
 #cityButton {
@@ -36,7 +36,7 @@ box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
   cursor: pointer;
   display: inline-block;
   font-family: -apple-system,system-ui,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
-  font-size: 16px;
+  font-size: 14px;
   font-weight: 500;
   line-height: 2.5;
   outline: transparent;
